Radian Unit System Button Ignored for Face Angles display. #31535

Closed
opened 2012-05-19 18:46:50 +02:00 by Terry Wallwork · 3 comments

%%%I am using Blender SVN Rev 46782 Debug build on a Fedora 16 Box.

I noticed that if I turn on Face Angles display in the 3D View Editor > Properties Region > Mesh Display > Numerics section. Such that face angles are displayed in the 3D Viewport. If I then goto the Properties Editor > Scene Context > Units Panel and change from Degrees to Radians. The angles displayed in the 3D Viewport are still displayed Degrees and not radians.

Attached my system-info.txt file and a demo blend file.

Select the top edge move it notice that face angles seems to be in degrees, then change the Unit System to Radians and move the edge again. Still in degrees?

%%%

%%%I am using Blender SVN Rev 46782 Debug build on a Fedora 16 Box. I noticed that if I turn on Face Angles display in the 3D View Editor > Properties Region > Mesh Display > Numerics section. Such that face angles are displayed in the 3D Viewport. If I then goto the Properties Editor > Scene Context > Units Panel and change from Degrees to Radians. The angles displayed in the 3D Viewport are still displayed Degrees and not radians. Attached my system-info.txt file and a demo blend file. Select the top edge move it notice that face angles seems to be in degrees, then change the Unit System to Radians and move the edge again. Still in degrees? %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn46798.

Thanks for reporting.%%%

%%%Fixed in svn46798. Thanks for reporting.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31535
No description provided.