Fix [#31535] Radian Unit System Button Ignored for Face Angles display.

Also avoid multiplying each vertex three times with obmat...